# 2025-finance-calculation

./: Cargo.toml  Dockerfile.lambda  Dockerfile.server  README.md
src/: handlers.rs  main.rs  routes.rs
