[package]
name = "zero-pii-fincance-calculations"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
lambda_http = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
anyhow = "1.0"

[features]
lambda-deploy = ["lambda_http"]
